// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerToggler should be rendered correctly 1`] = `
<div
  className="container uui-input-box colorSky root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      className="uui-input singleInput"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  />
</div>
`;

exports[`PickerToggler should be rendered correctly with extra props 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-24 mode-cell"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <div
      className="container uui-button-box uui-enabled root font-sans-semibold size-18 fill-solid color-night300 root"
      href={null}
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#btn-cross-12.svg"
          />
        </svg>
      </div>
    </div>
    <input
      className="uui-input"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
    >
      <svg
        className=""
        height={24}
        viewBox="0 0 12 24"
        width={12}
      >
        <use
          xlinkHref="#btn-cross-12.svg"
        />
      </svg>
    </div>
  </div>
</div>
`;
